Update slides dualite et introduction PI

--- a/7. PI - Introduction.tex
+++ b/7. PI - Introduction.tex
@@ -204,7 +204,7 @@ Sous la forme générale, cela donne $2^n - 1$ pivots.
 
 \mbox{}
 
-Pour $n = 50$, cela donne $2^{50} - 1 \approx 10^{15}$. Si on était capable de réaliser un millions de pivots par seconde, il faudrait aux environs de 33 ans pour résoudre le problème.
+Pour $n = 50$, cela donne $2^{50} - 1 \approx 10^{15}$. Si on était capable de réaliser un million de pivots par seconde, il faudrait aux environs de 33 ans pour résoudre le problème.
 
 \end{frame}
 
