Correction point de départ algo Mehrotra.

--- a/7. PI - Introduction.tex
+++ b/7. PI - Introduction.tex
@@ -208,6 +208,27 @@ Pour $n = 50$, cela donne $2^{50} - 1 \approx 10^{15}$. Si on était capable de 
 
 \end{frame}
 
+%\begin{frame}
+%\frametitle{Un peu d'histoire}
+
+% Pris de https://www.stat.cmu.edu/~ryantibs/convexopt-S15/lectures/16-primal-dual.pdf
+%\begin{itemize}
+%\item 
+%Dantzig (1940s): the simplex method. Still one of the most popular algorithms for linear programming.
+%\item
+%Klee and Minty (1960s): LP with $n$ variables and $2^n$ constraints that the simplex method needs to perform $2^n$ iterations to solve.
+%\item 
+%Khachiyan (1979): first polynomial-time algorithm for LP based on the ellipsoid method of Nemirovski and Yudin (1976). Theoretically strong but computationally weak.
+%\item
+%Karmarkar (1984): first interior-point polynomial-time algorithm for LP.
+%\item 
+%Renegar (1988): Newton-based interior-point algorithm for LP. Best known theoretical complexity to date.
+%\item
+%Modern state-of-the-art LP solvers typically use both simplex and interior-point methods.
+%\end{itemize}
+
+%\end{frame}
+
 \begin{frame}
 \frametitle{Méthodes de points intérieurs: complémentarité}
 
