--- a/8. Points Interieurs.tex
+++ b/8. Points Interieurs.tex
@@ -257,7 +257,7 @@ Considérons par exemple le centre analytique associé à un \textcolor{red}{pol
 \[
 \Omega = \lbrace \by \in \RR^m \,:\, \bc^T - \by^T \bA \geq \bzero \rbrace,
 \]
-où $\bA \in \RR^{m \times n}$ et $c \in \RR^n$ sont données, et $A$ est de rang $m$.
+où $\bA \in \RR^{m \times n}$ et $c \in \RR^n$ sont données, et $\bA$ est de rang $m$.
 
 \end{frame}
 
