Mise à jour exemple graphique

--- a/0. Intro.tex
+++ b/0. Intro.tex
@@ -220,17 +220,16 @@ Solution de base: $\bx = (\bx_b \ 0)$, avec $\bB\bx_b = \bb$.
 \end{frame}
 
 \begin{frame}
-\begin{exe}[Wyndor Glass]
-\label{ex:wyndor}
-La compagnie Wyndor Glass Co. produit des produits verriers de haute qualité, incluant des fenêtres et des portes vitrées.
+\begin{exe}
+Une compagnie produit des téléphones intelligents et des tablettes électroniques.
 Elle dispose à cette fin de trois usines (usine 1, usine 2, usine 3), qui ont chacune une capacité de production limitée.
-Les châssis en aluminium et les matériaux sont produits dans l'usine 1, les châssis en bois sont fabriqués dans l'usine 2, et l'usine 3 produit le verre et assemble les produits.
+Les coques et modules de communication des téléphones sont produits dans l'usine 1, les coques et composantes électroniques des tablettes dans l'usine 2, et l'usine 3 produit les écrans et assemble les produits.
 La compagnie a décidé de mettre en place de ligne de production:
 \begin{itemize}
 \item
-produit 1: une porte vitrée avec un châssis d'aluminium;
+produit 1: un téléphone;
 \item
-produit 2: une fenêtre double-vitrage avec châssis en bois.
+produit 2: une tablette.
 \end{itemize}
 
 Un lot de 20 unités donne lieu à un profit de \$3000 et \$5000, respectivement pour le produit 1 et le produit 2.
@@ -240,7 +239,7 @@ Un lot de 20 unités donne lieu à un profit de \$3000 et \$5000, respectivement
 
 \begin{frame}
 
-\begin{exe}[Wyndor Glass]
+\begin{exe}
 
 \begin{center}
 \begin{tabular}{|c|c|c|c|}
@@ -267,14 +266,14 @@ $x_1$, le nombre de lots du produit 1;
 \item
 $x_2$, le nombre de lots du produit 2.
 \end{itemize}
-Le fonction objectif est le profit total, qui vaut $3x_1 +5x_2$, en l'exprimant en miller de dollars. Nous voulons maximiser ce profit.
+La fonction objectif est le profit total, qui vaut $3x_1 +5x_2$, en l'exprimant en miller de dollars. Nous voulons maximiser ce profit.
 \end{exe}
 
 \end{frame}
 
 \begin{frame}
 
-\begin{exe}[Wyndor Glass]
+\begin{exe}
 En résumé, nous avons le problème d'optimisation suivant:
 \begin{align*}
 \max_x\ & z = 3x_1 + 5x_2 & & \\
